# cim

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  RECOVERY_PLAN.md  changelog.md  claude.md  contributing.md  flake.nix  flake.nix.with-cim-network  intent-story.md  project-structure.md  readme.md  test-cim-network-integration.sh
.claude/: CLAUDE.md  INDEX.md  VALIDATION_STATUS.md
.claude/standards/: rust-coding-standards.md
.cursor/rules/: code-policy.mdc  ddd-patterns.mdc  design-patterns.mdc  mcp.mdc  nixmcp.mdc  project-memory.mdc  research.mdc  ruler.mdc  rust.mdc  vocabulary.mdc
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3yrdyyrkpa3k2yfq2dqk8zdz8liz3knz-source  bwps706g6ywl1811r7bwv32py12129ci-source  hn95cvpn7xb5pj4s8rhb435s4dbp5aq2-source  nis8h8ibh1aichik7ww9dchqixkpafwf-source
.github/workflows/: update-module-graph.yml  update-registry.yml
.rules/: cim-conversation-model.mdc  main.mdc
cim-client/: Cargo.toml  README.md
cim-client/examples/: simple_client.rs
cim-client/src/: client.rs  domain.rs  error.rs  lib.rs  main.rs
cim-ontology-tool/: Cargo.toml  README.md
cim-ontology-tool/docs/: architecture.md  implementation_decisions.md  implementation_plan.md  progress.md  requirements.md
cim-ontology-tool/examples/: event_driven.rs
cim-ontology-tool/src/: lib.rs  main.rs
cim-ontology-tool/src/analyzer/: mod.rs
cim-ontology-tool/src/cli/: mod.rs
cim-ontology-tool/src/events/: handlers.rs  mod.rs
cim-ontology-tool/src/extractor/: markdown.rs  mod.rs
cim-ontology-tool/src/mcp/: handler.rs  mod.rs  operations.rs  server.rs
cim-ontology-tool/src/ontology/: mod.rs  relationship.rs  source.rs  term.rs
cim-ontology-tool/src/storage/: mod.rs
cim-ontology-tool/src/storage/neo4j/: mapping.rs  mod.rs  queries.rs
cim-ontology-tool/src/utils/: mod.rs
doc/: README_CIM_OVERVIEW.md  api-reference.md  architecture-deep-dive.md  cim-network-integration.md  cim_comprehensive_manual.md  cim_domain_knowledge_graph.json  cim_domain_knowledge_graph.md  cim_modules_catalog.md  claude_cim_conversation_prompt.md  commit_signing_policy.md  context-mapping-guide.md  deployment-guide.md  domain-development-guide.md  event-storming-guide.md  index.md  quick-start-guide.md  readme_cim_overview.md  state-machine-patterns.md  troubleshooting-guide.md  workflow-graph-guide.md
doc/design/: core-architecture.md  event-correlation-causation.md  nix-integration-design.md  readme.md
doc/plan/: fix-cim-network-compilation.md  phase-1-foundation.md  readme.md  tdd-ddd-eda-refactoring.md
doc/progress/: commit_signing.md  progress.json
doc/prompts/: README.md  private-mortgage-expert-simple.md  private-mortgage-lending-expert.md  private-mortgage-lending-interactive.md
doc/qa/: cim-registry-quality-validation.md
doc/research/: conceptual-spaces-theory.md  readme.md
docs/: cim_ontology_tool.md  dashboard.md  domainContext.md  file_structure_and_workflow.md  knowledge_graph.md  knowledge_graph_implementation.md  notes_vocabulary_alignment.md  progress.md  projectBrief.md  projectContext.md  standardization_checklist.md  standardization_progress.md  systemPatterns.md  techContext.md  vocabulary.md  vocabulary_index.md  vocabulary_management_workflow.md  vocabulary_quality_dashboard.md  vocabulary_standardization.md  vocabulary_standardization_guide.md
docs/domain/: README.md
docs/vocabulary/: readme.md
examples/: helix-vscode-config.toml  nix-integration-demo.nix
modules/: default.nix
modules/cim-events/: Cargo.toml  README.md
modules/cim-events/examples/: event_store_demo.rs
modules/cim-events/src/: domain.rs  event_store.rs  lib.rs
modules/cim-events/tests/: event_store_tests.rs
modules/cim-projections/: Cargo.toml  README.md
modules/cim-projections/examples/: projection_demo.rs
modules/cim-projections/src/: error.rs  lib.rs  manager.rs  projection.rs  store.rs
modules/cim-projections/tests/: projection_tests.rs
modules/cursor-rules/: README.md  config.nix  default.nix  update-rules.sh
nix/: README.md
nix/containers/: default.nix
nix/environments/: development.nix  production.nix
nix/lib/: default.nix
nix/modules/: cim-events.nix  cim-network.nix  cim-projections.nix  default.nix
notes/: README.md  architecture.md  cim_research.md  domain.yaml  index.md  knowledge_graph.md  knowledge_management.md  progress.md  vocabulary.md
notes/agents/: readme.md
notes/ai_integration/: readme.md
notes/arguments/: readme.md
notes/axioms/: axioms.yaml  readme.md
notes/businessmodel/: cim_business_model.md  readme.md
notes/claims/: CIM - Architecture.md  CIM - ECS Backend.md  CIM - For the Knowledge worker.md  Implementation Tooling.md  README.md  ValuePropositions.md  conceptual-spaces.md  messaging.md  readme.md  techstack.md
notes/decisions/: 2023-12-10-vocabulary-management-workflow.md  2024-03-30-file-structure-standardization.md  2024-03-30-file-structure-workflow-standardization.md  2024-05-06-nats-based-mcp-client.md  cursor-rules-modularization.md  event-driven-architecture-implementation.md  file-structure-workflow-standardization.md  mermaid_diagrams.md  vocabulary-management-workflow.md
notes/domains/: README.md  template.md
registry/: README.md  changelog.md  graph-system.md  modules-graph.json  modules.yaml  private-domains.yaml  production-migration.md  status.json
s3/: readme.md
scripts/: Cargo.toml  add_all_properties.sh  add_missing_properties.sh  add_missing_properties_simple.sh  add_term_property.sh  analyze_notes_vocabulary_alignment.sh  convert_to_cypher.sh  generate-graph-viz.js  generate_domain_graphs.sh  generate_knowledge_graph.rs  generate_knowledge_graph.sh  generate_mermaid_graph.sh  query-graph.sh  query-modules.sh  standardize_vocabulary.sh  standardize_vocabulary_enhanced.sh  sync-catalog.sh  update_vocabulary_dashboard.sh  vocabulary_manager.sh  workflow_analyzer.sh  zed
src/: app.rs  lib.rs  main.rs  source.rs
templates/: module-notify-action.yml
(+142 files in other folders)
