[package]
name = "cim-ontology-tool"
version = "0.1.0"
edition = "2021"
authors = ["The CowboyAI Team"]
description = "A tool for extracting, managing, and analyzing ontologies in the context of the CIM"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.40"

# Web server and API
axum = "0.6.18"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
hyper = "0.14.26"

# Serialization
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

# Database
neo4rs = "0.6.2"

# File system and text processing
walkdir = "2.3.3"
regex = "1.8.4"

# Command-line interface
clap = "2.34.0"
dotenv = "0.15.0"

# Tests
tempfile = "3.5.0"
mockall = "0.11.4"

[dev-dependencies]
tokio-test = "0.4.2"
assert_matches = "1.5.0"

[features]
default = []
integration-tests = [] 