[package]
name = "cim-client"
version = "0.1.0"
edition = "2021"
authors = ["The Cowboy AI Team"]
description = "NATS-based MCP client for the CIM Ontology Tool"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"

# Error handling
anyhow = "1.0.80"
thiserror = "1.0.58"

# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# NATS client
async-nats = "0.33.0"

# Data types
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

# CLI
clap = { version = "4.4.18", features = ["derive"] }

# GUI (optional)
iced = { version = "0.10.0", features = ["tokio", "image"], optional = true }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = []
cli = ["clap"]
gui = ["iced"]

[[bin]]
name = "cim-client"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "cim-client-gui"
path = "src/bin/gui.rs"
required-features = ["gui"] 