[package]
name = "cim-ontology-tool"
version = "0.1.0"
edition = "2021"
description = "An ontology extraction tool for Composable Information Machines (CIMs)"
authors = ["The Cowboy AI Team"]
license = "MIT"

[dependencies]
# File and directory handling
walkdir = "2.4.0"
glob = "0.3.1"

# Text processing and extraction
regex = "1.10.3"
tokenizers = "0.15.2"
rust-stemmers = "1.2.0"

# Ontology parsing and manipulation
rdf = "0.1.4"
turtle = { version = "1.0.0-rc.3" }

# Data structures and algorithms
petgraph = "0.6.4"
hashbrown = "0.14.3"
indexmap = "2.2.2"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.33", features = ["serde"] }
async-trait = "0.1.77"

# CLI tools
clap = { version = "4.4.18", features = ["derive"] }
indicatif = "0.17.8"

# Error handling
thiserror = "1.0.58"
anyhow = "1.0.80"

# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# Async and concurrency
tokio = { version = "1.36.0", features = ["full"] }
rayon = "1.8.1"

# Web server and HTTP
axum = { version = "0.7.4", features = ["json", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }

# Neo4j client
neo4rs = "0.7.1"

# Event-driven architecture
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
crossbeam-channel = "0.5.11"

[dev-dependencies]
tempfile = "3.10.0"
criterion = "0.5.1"
pretty_assertions = "1.4.0"

[[bin]]
name = "cim-ontology"
path = "src/main.rs"

[lib]
name = "cim_ontology"
path = "src/lib.rs"

[[example]]
name = "event_driven"
path = "examples/event_driven.rs" 